Fix leak from complicated ownership cycle by releasing |mChromeEventHandler| in |CleanUp| and |SetDocShell|.  b=87466  r=saari  sr=hyatt